# random-bible-verse

./: .env  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
random_bible_verse/: app.py  config.py  crud_bible.py  db.py  init_db.py  models.py
