[tool.poetry]
name = "random-bible-verse"
version = "0.1.0"
description = "Random bible verse app"
authors = ["jdjenontin <jdjenontin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.24"
dash = "^3.1.1"
dash-bootstrap-components = "^2.0.3"
gunicorn = "^23.0.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
